XML voor toestanden in overeenstemming gebracht met STOP schema's

--- a/simulator/weergave_webpagina_start.html
+++ b/simulator/weergave_webpagina_start.html
@@ -173,6 +173,41 @@
             font-weight: bold;
         }
 
+        .sectie_bg {
+            border-right: 1em solid #9673a6;
+            border-top: 3px solid #9673a6;
+        }
+
+            .sectie_bg h1 {
+                color: #9673a6;
+            }
+
+        .sectie_op {
+            border-right: 1em solid #6c8ebf;
+            border-top: 3px solid #6c8ebf;
+        }
+
+            .sectie_op h1 {
+                color: #6c8ebf;
+            }
+
+        .sectie_lv {
+            border-right: 1em solid #d79b00;
+            border-top: 3px solid #d79b00;
+        }
+
+            .sectie_lv h1 {
+                color: #d79b00;
+            }
+
+        .sectie_lv_alt1 {
+            border-right: 1em solid #ffe6cc;
+        }
+
+        .sectie_lv_alt2 {
+            border-right: 1em solid #d79b00;
+        }
+
         /*EXTRASTYLE*/
     </style>
 
