Splitsing projectvoortgang en BG-intern versiebeheer/consolidatie, plus start van weergave

--- a/broncode/simulator/weergave_project_uitwisselingen_help.html
+++ b/broncode/simulator/weergave_project_uitwisselingen_help.html
@@ -1,3 +1,3 @@
 <p>
-    Dit overzicht laat de STOP modules zien die voor de geselecteerde uitwisseling in de keten uitgewisseld worden.
+    Dit overzicht laat de STOP modules zien die voor de geselecteerde projectactie in de keten uitgewisseld worden.
 </p>
