--- a/broncode/simulator/applicatie_web_invoer.html
+++ b/broncode/simulator/applicatie_web_invoer.html
@@ -1,7 +1,8 @@
 <p>
-    Zie de <a href="https://github.com/STOPwerk/Versiebeheer-simulator/wiki">documentatie</a> voor een beschrijving van de invoer.
+    Zie de <a href="https://github.com/STOPwerk/Versiebeheer-simulator/wiki">documentatie</a> voor de beschrijving van de invoer.
 </p>
 <form id="Invoer" action="resultaat" method="post" target="_blank" class="invoer" enctype="multipart/form-data">
+    <button id="startknop">Start simulator</button>
     <h2>Invoerbestanden</h2>
     <div class="box">
         <p>Maak zelf invoerbestanden,</p>
@@ -18,7 +19,4 @@
     <div>
         <strong id="MaakTekstvak">Maak extra tekstvak</strong>
     </div>
-
-    <h2>Simulator</h2>
-    <button>Start simulator</button>
 </form>
