Parametervervanging bij uitlevering ipv at runtime

--- a/broncode/simulator/applicatie_web_index.html
+++ b/broncode/simulator/applicatie_web_index.html
@@ -20,7 +20,7 @@
         <li>Lees de <a href="https://github.com/STOPwerk/Versiebeheer-simulator/wiki">documentatie</a> waarin staat hoe de invoerbestanden gemaakt moeten worden.</li>
         <li>
             Bekijk de <a href="https://github.com/STOPwerk/Versiebeheer-simulator/tree/main/voorbeelden">voorbeelden</a> om inspiratie op te doen.
-            De simulator is ook gebruikt voor een deel van de <a href="@@@STOP_Repository_Url@@@voorbeelden/">STOP voorbeelden</a>
+            De simulator is ook gebruikt voor een deel van de <a href="@@@STOP_Voorbeelden_Url@@@">STOP voorbeelden</a>
         </li>
         <li>Maak zelf voorbeeldbestanden en ga naar de <a href="invoer">invoerpagina</a> om de simulator uit te voeren.</li>
     </ul>
