Website met voorbeelden, start interactieve BG-proces-invoer

--- a/broncode/simulator/applicatie_web_invoer.html
+++ b/broncode/simulator/applicatie_web_invoer.html
@@ -7,7 +7,7 @@
     <div class="box">
         <p>Maak zelf invoerbestanden,</p>
         <label>
-            <strong>selecteer de bestanden</strong>
+            <strong>selecteer (een zip met) de bestanden</strong>
             <span>of sleep ze hier naar toe.</span>
             <input class="box__file" type="file" name="files[]" multiple accept="application/json,application/xml" />
         </label>
