Meer BG proces invoer

--- a/broncode/simulator/applicatie_web_index.html
+++ b/broncode/simulator/applicatie_web_index.html
@@ -11,12 +11,14 @@
     De simulator is een online versie van het <a href="@@@Simulator_Url@@@">Python script</a> dat
     toegepast wordt op een invoer van XML elementen en JSON objecten. Het resultaat is een interactieve webpagina waarin
     getoond wordt hoe de keten met de informatie uit de bestanden om kan gaan. De simulator laat de mogelijkheden uit
-    het STOP versiebeheer zien. Bij het implementeren van STOP kunnen de verschillende systemen voor een andere
-    aanpak kiezen of aanvullende eisen stellen.
+    het STOP versiebeheer zien, en hoe dat resulteert in de weergave van besluiten en regelgeving. Bij het implementeren
+    van STOP kunnen de verschillende systemen voor een andere aanpak kiezen of aanvullende eisen stellen.
 </p>
 <p>
     De online tools worden gehost via het <a href="https://vercel.com/pricing">hobby</a> plan dat ongetwijfeld niet geschikt is voor massaal gebruik.
-    Om met veel/complexe scenario's aan de slag te gaan: download de Python scripts en draai de simulator op eigen hardware.
+    Bij het uitvoeren van de simulator wordt de meeste tijd besteed aan het samenstellen van de resultaatpagina, die bij
+    scenario's met veel publicaties al snel erg omvangrijk wordt.
+    Om met veel/omvangrijke/complexe scenario's aan de slag te gaan: download de Python scripts en draai de simulator op eigen hardware.
 </p>
 <h2>Hoe gebruik ik het?</h2>
 <p>
