Weergave BG-proces

--- a/broncode/simulator/voorbeelden/3. Gezien vanuit LVBB/9. Complex voorbeeld/Simulator_Resultaat.html
+++ b/broncode/simulator/voorbeelden/3. Gezien vanuit LVBB/9. Complex voorbeeld/Simulator_Resultaat.html
@@ -2957,7 +2957,7 @@ Applicatie = (function () {
     }
 
     // Selectie van projectacties
-    Applicatie.SelecteerProjectactie = function (uitgevoerdOp) {
+    Applicatie.SelecteerActiviteit = function (uitgevoerdOp) {
         Applicatie.SelecteerUitwisseling(uitgevoerdOp);
     }
 
