--- a/broncode/simulator/weergave_webpagina_start.html
+++ b/broncode/simulator/weergave_webpagina_start.html
@@ -29,6 +29,18 @@
             vertical-align: top;
         }
 
+        .w100 {
+            width: 100%;
+        }
+
+        .nw {
+            white-space: nowrap;
+        }
+
+        .c {
+            text-align: center;
+        }
+
         a {
             color: blue;
             text-decoration: none;
@@ -53,7 +65,7 @@
             }
 
 
-        #meldingen_tabel {
+        .meldingen_tabel {
             border: 1px solid #808080;
         }
 
