BG kan publiceren

--- a/broncode/simulator/weergave_resultaat_help_sectie_lv.html
+++ b/broncode/simulator/weergave_resultaat_help_sectie_lv.html
@@ -1,6 +1,7 @@
 <p>
-    De resultaten in deze sectie laten zien wat systemen uit de consolidatie-informatie kunnen afleiden
-    en aan anderen kunnen tonen. De systemen zullen in het algemeen landelijke voorzieningen zijn (zoals de LVBB).
+    Deze sectie laat zien wat systemen uit de consolidatie-informatie en metadata/statusinformatie
+    kunnen afleiden die met de publicaties worden meegeleverd. De systemen zullen in het algemeen landelijke voorzieningen
+    zijn (zoals de LVBB). De resultaten van deze afleiding zijn nodig om de overzichten uit de voorgaande sectie te kunnen maken.
     Een deel van de afleiding bestaat uit de geautomatiseerde consolidatie, waarbij de ontvangende systemen
     uit de uitgewisselde consolidatie-informatie de geldende regelgeving destilleren.
     De resultaten zijn uitgesplitst naar instrument (= regeling/informatieobject).
