--- a/broncode/simulator/weergave_resultaat_help_sectie_op.html
+++ b/broncode/simulator/weergave_resultaat_help_sectie_op.html
@@ -1,6 +1,6 @@
 <p>
     Deze sectie geeft informatie over de uitwisseling van besluiten, rectificaties, mededelingen en revisies
-    en de publicaties die daarvan het gevolg zijn. De publicaties zijn voor het uitvoeren van de consolidatie
-    niet van belang, maar kunnen gebruikt worden voor een alternatieve weergave van regelgeving als de
-    consolidatie (nog) niet is uitgevoerd.
+    en de publicaties die daarvan het gevolg zijn. Daarnaast wordt de uitkomst van de verwerking van de
+    publicaties in de vorm van de geconsolideerde regelgeving beschikbaar gesteld. Deze sectie geeft een
+    indruk welke informatie eenieder kan zien in de landelijke voorzieningen.
 </p>
