BGproces front-end stapje verder

--- a/broncode/simulator/applicatie_web_project_invoer.html
+++ b/broncode/simulator/applicatie_web_project_invoer.html
@@ -16,7 +16,7 @@
             <dt><input type="radio" name="_soortBG" id="_soortBG_Gemeente" value="Gemeente" /> <label for="_soortBG_Gemeente">Gemeente</label></dt>
             <dd>
                 Een gemeente werkt tegelijk aan één of meer wijzigingen van een regeling, besluiten altijd van een inwerkingtredingsdatum
-                voorziet, en die te maken heeft met rechters of hogere bevoegd gezagen die besluiten kunnen bijstellen.
+                voorziet, en rechters of hogere bevoegd gezagen kunnen oordelen over hun besluiten.
             </dd>
             <dt><input type="radio" name="_soortBG" id="_soortBG_Rijk" value="Rijk" /> <label for="_soortBG_Rijk">Rijk</label></dt>
             <dd>
