--- a/broncode/simulator/weergave_webpagina_start.html
+++ b/broncode/simulator/weergave_webpagina_start.html
@@ -41,6 +41,10 @@
             text-align: center;
         }
 
+        .ra {
+            text-align: right;
+        }
+
         a {
             color: blue;
             text-decoration: none;
