--- a/broncode/simulator/applicatie_web_project_invoer.html
+++ b/broncode/simulator/applicatie_web_project_invoer.html
@@ -1,44 +1,47 @@
 <div id="_start_soortBG">
-    <p>
-        Geef aan of het scenario gaat over
-        <label for="_optie_regelingen"><input type="checkbox" id="_optie_regelingen"> meerdere regelingen</label>,
-        <label for="_optie_io"><input type="checkbox" id="_optie_io"> informatieobjecten</label>,
-        <label for="_optie_annotaties"><input type="checkbox" id="_optie_annotaties"> STOP annotaties</label>
-        en/of
-        <label for="_optie_nonstop"><input type="checkbox" id="_optie_nonstop"> non-STOP annotaties</label>
-        bij regeling-/informatieobjectversies.
-    </p>
-    <p>
-        De verschillende bevoegd gezagen hebben een andere manier van werken. De twee uitersten zijn:
-    </p>
-    <p>
-        <dl>
-            <dt><input type="radio" name="_soortBG" id="_soortBG_Gemeente" value="Gemeente" /> <label for="_soortBG_Gemeente">Gemeente</label></dt>
-            <dd>
-                Een gemeente werkt tegelijk aan één of meer wijzigingen van een regeling, besluiten altijd van een inwerkingtredingsdatum
-                voorziet, en rechters of hogere bevoegd gezagen kunnen oordelen over hun besluiten.
-            </dd>
-            <dt><input type="radio" name="_soortBG" id="_soortBG_Rijk" value="Rijk" /> <label for="_soortBG_Rijk">Rijk</label></dt>
-            <dd>
-                De Rijksoverheid werkt tegelijk aan één of meer wijzigingen van een regeling, besluiten worden zonder inwerkingtredingsdatum
-                gepubliceerd, over de (gedeeltelijke) inwerkingtreding wordt pas op een later moment besloten.
-            </dd>
-        </dl>
-    </p>
-    <p>
-        Selecteer een bevoegd gezag om verder te gaan, of werk verder aan een eerder samengestelde specificatie:
-    </p>
-    <div id="_start_specificatie" class="box">
-        <label>
-            <strong>selecteer het invoerbestand</strong>
-            <span>(meestal bg_proces.json)</span>
-            <span>of sleep het hier naar toe.</span>
-            <input class="box__file" type="file" id="_start_specificatie_json" accept="application/json" />
-        </label>
-        <p id="_specificatie_fout">
-            Kan de specificatie niet lezen:
-            <div id="_specificatie_foutmelding"></div>
+    <button data-accordion="_start_soortBG_a" class="accordion_h active">Scenario</button>
+    <div data-accordion-paneel="_start_soortBG_a" class="accordion_h_paneel" style="display: block">
+        <p>
+            Geef aan of het scenario gaat over
+            <label for="_optie_regelingen"><input type="checkbox" id="_optie_regelingen"> meerdere regelingen</label>,
+            <label for="_optie_io"><input type="checkbox" id="_optie_io"> informatieobjecten</label>,
+            <label for="_optie_annotaties"><input type="checkbox" id="_optie_annotaties"> STOP annotaties</label>
+            en/of
+            <label for="_optie_nonstop"><input type="checkbox" id="_optie_nonstop"> non-STOP annotaties</label>
+            bij regeling-/informatieobjectversies.
         </p>
+        <p>
+            De verschillende bevoegd gezagen hebben een andere manier van werken. De twee uitersten zijn:
+        </p>
+        <p>
+            <dl>
+                <dt><input type="radio" name="_soortBG" id="_soortBG_Gemeente" value="Gemeente" /> <label for="_soortBG_Gemeente">Gemeente</label></dt>
+                <dd>
+                    Een gemeente werkt tegelijk aan één of meer wijzigingen van een regeling, besluiten altijd van een inwerkingtredingsdatum
+                    voorziet, en rechters of hogere bevoegd gezagen kunnen oordelen over hun besluiten.
+                </dd>
+                <dt><input type="radio" name="_soortBG" id="_soortBG_Rijk" value="Rijk" /> <label for="_soortBG_Rijk">Rijk</label></dt>
+                <dd>
+                    De Rijksoverheid werkt tegelijk aan één of meer wijzigingen van een regeling, besluiten worden zonder inwerkingtredingsdatum
+                    gepubliceerd, over de (gedeeltelijke) inwerkingtreding wordt pas op een later moment besloten.
+                </dd>
+            </dl>
+        </p>
+        <p>
+            Selecteer een bevoegd gezag om verder te gaan, of werk verder aan een eerder samengestelde specificatie:
+        </p>
+        <div id="_start_specificatie" class="box">
+            <label>
+                <strong>selecteer het invoerbestand</strong>
+                <span>(meestal bg_proces.json)</span>
+                <span>of sleep het hier naar toe.</span>
+                <input class="box__file" type="file" id="_start_specificatie_json" accept="application/json" />
+            </label>
+            <p id="_specificatie_fout">
+                Kan de specificatie niet lezen:
+                <div id="_specificatie_foutmelding"></div>
+            </p>
+        </div>
     </div>
 </div>
 <div id="_specificatie">
@@ -47,6 +50,12 @@
         <textarea name="onlineInvoer1" class="onlineInvoer" id="_bg_proces_data"></textarea>
         <div class="download"><a href="#" id="_download_specificatie" download="bg_proces.json">Download specificatie</a></div>
     </form>
+    <p id="_heeft_meldingen">
+        De specificatie kon ingelezen worden maar is misschien niet zoals verwacht.
+        <table id="_meldingen">
+            <tr><td>Tijdstip van de activiteit</td><td>Meldingen</td></tr>
+        </table>
+    </p>
     <div id="_bg_proces">
 
     </div>
