--- a/broncode/simulator/applicatie_web_project_invoer.html
+++ b/broncode/simulator/applicatie_web_project_invoer.html
@@ -46,7 +46,7 @@
 </div>
 <div id="_specificatie">
     <form id="Invoer" action="resultaat" method="post" target="_blank" class="invoer" enctype="multipart/form-data">
-        <button id="startknop">Start simulator</button>
+        <button id="startknop">Start LVBB simulator</button>
         <textarea name="onlineInvoer1" class="onlineInvoer" id="_bg_proces_data"></textarea>
         <div class="download"><a href="#" id="_download_specificatie" download="bg_proces.json">Download specificatie</a></div>
     </form>
