--- a/broncode/simulator/weergave_webpagina_start.html
+++ b/broncode/simulator/weergave_webpagina_start.html
@@ -23,6 +23,7 @@
 
         th {
             text-align: left;
+            vertical-align: top;
         }
 
         td {
@@ -31,6 +32,10 @@
 
         .w100 {
             width: 100%;
+        }
+
+        .w50 {
+            width: 50%;
         }
 
         .nw {
