Invoer LVBB simulator

--- a/broncode/simulator/applicatie_web_project_invoer.html
+++ b/broncode/simulator/applicatie_web_project_invoer.html
@@ -68,6 +68,7 @@
     <form id="_bgps_lvbb_data" action="resultaat" method="post" target="_blank" class="invoer" enctype="multipart/form-data">
         <button id="_bgps_lvbb_startknop">Start LVBB simulator</button>
         <!--<textarea name="onlineInvoer1" class="verborgenInvoer"></textarea>-->
+        <div class="download"><a href="#" id="_bgps_download_lvbb_specificatie" download="versiebeheer_simulator.zip">Download LVBB simulator bestanden</a></div>
         <div class="download"><a href="#" id="_bgps_download_specificatie" download="bg_proces.json">Download scenario specificatie</a></div>
     </form>
     <div id="_bgps_simulator">
