LVBB simulator aansturing met proefversies en annotaties

--- a/broncode/simulator/weergave_webpagina_start.html
+++ b/broncode/simulator/weergave_webpagina_start.html
@@ -192,12 +192,12 @@
             font-weight: bold;
         }
 
-        .sectie_bg {
+        .sectie_uw {
             border-right: 1em solid #9673a6;
             border-top: 3px solid #9673a6;
         }
 
-            .sectie_bg h1 {
+            .sectie_uw h1 {
                 color: #9673a6;
             }
 
