Activiteit Download & Wijzigen

--- a/broncode/simulator/applicatie_web_project_invoer.html
+++ b/broncode/simulator/applicatie_web_project_invoer.html
@@ -16,7 +16,7 @@
                         Een gemeente werkt tegelijk aan één of meer wijzigingen van een regeling, besluiten altijd van een inwerkingtredingsdatum
                         voorziet, en rechters of hogere bevoegd gezagen kunnen oordelen over hun besluiten.
                     </dd>
-                    <dt><input type="radio" name="_start_soortBG" id="_start_soortBG_Rijk" value="Rijksoverheid" /> <label for="_start_soortBG_Rijk">Rijksoverheid</label></dt>
+                    <dt><input type="radio" name="_start_soortBG" id="_start_soortBG_Rijk" value="Rijksoverheid" disabled /> <label for="_start_soortBG_Rijk">Rijksoverheid</label></dt>
                     <dd>
                         De rijksoverheid werkt tegelijk aan één of meer wijzigingen van een regeling, nieuwe regelingen en wijzigingen worden in besluiten gescheiden,
                         besluiten worden zonder inwerkingtredingsdatum gepubliceerd, over de (gedeeltelijke) inwerkingtreding wordt pas op een later moment besloten.
