--- a/broncode/simulator/applicatie_web_index.html
+++ b/broncode/simulator/applicatie_web_index.html
@@ -13,7 +13,7 @@
             weg kan houden van de eindgebruiker. Het laat ook zien hoe het generieke STOP-versiebeheer een breed scala aan
             werkwijzen en consolidatie-scenario's ondersteunt.
         </dd>
-        <dt><a href="invoer">LVBB simulator</a></dt>
+        <dt><a href="invoer">Simulator @LVBB</a></dt>
         <dd>
             Een simulator die als invoer uitgewisselde STOP-modules heeft en laat zien wat de LVBB en andere landelijke
             voorzieningen met die informatie kunnen doen.
@@ -31,7 +31,7 @@
             Ga naar de <a href="voorbeeld">voorbeelden</a> om een lijst met voorgedefinieerde scenario's te bekijken.
         </li>
         <li>Kies een voorbeeld uit om daarvoor de simulator uit te voeren.</li>
-        <li>Voorbeelden gezien vanuit een bevoegd gezag kunnen aangepast worden voordat de simulator uitgevoerd wordt.</li>
+        <li>Vanuit een voorbeeld voor de Simulator @bevoegd gezag kan de Simulator @LVBB gestart worden, eventueel na aanpassing van het voorbeeld.</li>
     </ul>
     Het is ook mogelijk zelf een scenario samen te stellen en te simuleren. Het meest eenvoudige is:
     <ul>
@@ -39,22 +39,22 @@
             Ga naar de <a href="project_invoer">Simulator @bevoegd gezag</a> om een beschrijving te maken hoe het bevoegd gezag
             komt tot nieuwe versies van een regeling en ze omgaat met rectificaties en gerechtelijke procedures.
         </li>
-        <li>Als de invoer compleet is kan de LVBB-simulator gedraaid worden.</li>
+        <li>Als de invoer compleet is kan de simulator @LVBB gedraaid worden.</li>
     </ul>
-    De simulator kan veel meer (fout)scenario's aan dan via de Simulator @bevoegd gezag samengesteld kunnen worden. Ook is het mogelijk
-    de simulator te draaien op alleen de modules die aan het brnhouderkoppelvlak worden aangeleverd. Daarvoor:
+    De Simulator @LVBB kan veel meer (fout)scenario's aan dan via de Simulator @bevoegd gezag samengesteld kunnen worden. Ook is het mogelijk
+    de simulator te draaien op alleen de modules die aan het bronhouderkoppelvlak worden aangeleverd. Daarvoor:
     <ul>
         <li>Lees de <a href="@@@Simulator_Url@@@wiki">documentatie</a> waarin staat hoe de invoerbestanden gemaakt moeten worden.</li>
         <li>
             Bekijk de <a href="@@@Simulator_Url@@@tree/main/broncode/simulator/voorbeelden">voorbeelden</a> om inspiratie op te doen.
             De simulator is ook gebruikt voor een deel van de <a href="@@@STOP_Voorbeelden_Url@@@">STOP voorbeelden</a>
         </li>
-        <li>Maak zelf voorbeeldbestanden en ga naar de <a href="invoer">invoerpagina</a> om de simulator uit te voeren.</li>
+        <li>Maak zelf voorbeeldbestanden en ga naar de <a href="invoer">invoerpagina</a> om de simulator @LVBB uit te voeren.</li>
     </ul>
 </p>
 <p>
-    De online versie van de LVBB simulator  wordt gehost via het <a href="https://vercel.com/pricing">hobby</a> plan dat ongetwijfeld niet geschikt is voor massaal gebruik.
-    Bij het uitvoeren van de LVBB simulator wordt de meeste tijd besteed aan het samenstellen van de resultaatpagina, die bij
+    De online versie van de Simulator @LVBB wordt gehost via het <a href="https://vercel.com/pricing">hobby</a> plan dat ongetwijfeld niet geschikt is voor massaal gebruik.
+    Bij het uitvoeren van de Simulator @LVBB wordt de meeste tijd besteed aan het samenstellen van de resultaatpagina, die bij
     scenario's met veel publicaties al snel erg omvangrijk wordt.
     Om met veel/omvangrijke/complexe scenario's aan de slag te gaan: download de <a href="@@@Simulator_Url@@@">Python scripts</a> en draai de simulator op eigen hardware.
 </p>
